samples/_failures_safe/1760887806_eb4292_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bf83ba06.c: In function ‘main’:
./samples/SAFE/__tmp_bf83ba06.c:160:12: error: missing terminating " character
  160 |     printf("Transpose of matrix B
      |            ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bf83ba06.c:160:5: error: expected expression at end of input
  160 |     printf("Transpose of matrix B
      |     ^~~~~~
./samples/SAFE/__tmp_bf83ba06.c:160:5: error: expected declaration or statement at end of input
